--- a/src/lib/stores/config-text.json
+++ b/src/lib/stores/config-text.json
@@ -1,5 +1,5 @@
 {
-  "heading": "What is the share of households suffering under energy poverty?"
+  "heading": "What is the share of households suffering under energy poverty?",
   "subheading": "In 2023 on average 10.6% of total households in member states of the EU27 were suffering under energy poverty.",
   "legend1": "No data available",
   "tooltip1": "of households",
