--- a/src/lib/stores/config-text.json
+++ b/src/lib/stores/config-text.json
@@ -1,6 +1,6 @@
 {
-  "heading": "What is the share of households suffering under energy poverty?",
-  "subheading": "In 2023 on average 10.6% of total households in member states of the EU27 were suffering under energy poverty.",
+  "heading": "How many European households are facing energy poverty?",
+  "subheading": "On average, 10.6% of households in the EU were unable to meet their energy needs in 2023.",
   "legend1": "No data available",
   "tooltip1": "of households",
   "textSourceDescription": "Source",
