--- a/src/lib/stores/config-text.json
+++ b/src/lib/stores/config-text.json
@@ -1,6 +1,6 @@
 {
   "heading": "How many European households are facing energy poverty?",
-  "subheading": "On average, 7.4% of households in the EU were unable to meet their energy needs in 2024.",
+  "subheading": "On average, 7.4% of households in the EU were unable to meet their energy needs in 2024. An improvement of 3.2% from 2023.",
   "legend1": "No data available",
   "tooltip1": "of households",
   "textSourceDescription": "Source",
